--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,46 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
 *.so
+
+# Distribution / packaging (minimal)
+build/
+dist/
+*.egg-info/
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE / Editor specific files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+._*
+
+# Log files
+*.log
+
+# Coverage reports
+.coverage
+.coverage.*
+coverage.xml
+
+# Pytest cache
+.pytest_cache/
 
 # Distribution / packaging
 .Python
-build/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -19,8 +50,6 @@ parts/
 sdist/
 var/
 wheels/
-*.egg-info/
-.installed.cfg
 *.egg
 MANIFEST
 
@@ -38,11 +67,6 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .nox/
-.coverage
-.coverage.*
-.cache
-.pytest_cache/
-.hypothesis/
 pytestdebug.log
 
 # Translations
@@ -50,7 +74,6 @@ pytestdebug.log
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 
@@ -74,18 +97,7 @@ target/
 profile_default/
 ipython_config.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
 # IDE / Editor specific files
-.idea/
-.vscode/
 *.project
 *.pydevproject
 .tm_properties
